# baba-solver

./: .gitignore  BabaSolver.sln  BabaSolver_vector.cpp  Performance.txt  README.md
BabaSolver/: BabaSolver.cpp  BabaSolver.sln  BabaSolver.vcxproj  BabaSolver.vcxproj.filters  GameState.cpp  GameState.h  Main.cpp  Parameters.h  Solver.cpp  Solver.h  performance.txt
BabaSolverCMake/: CMakeLists.txt  toolchain.cmake
BabaSolverTest/: BabaSolverTest.vcxproj  SolverTest.cpp  pch.h  test.cpp
c#/: Program.cs
src/: CMakeLists.txt  GameState.cpp  GameState.h  GameStateMtn6.cpp  GameStateMtn6.h  GameStateMtnE1.cpp  GameStateMtnE1.h  Main.cpp  NumberFormat.cpp  NumberFormat.h  Replayer.cpp  Replayer.h  Solver.cpp  Solver.h  SolverTest.cpp  Summarizer.cpp  Summarizer.h  toolchain.cmake
